--- a/public/index.html
+++ b/public/index.html
@@ -1012,9 +1012,11 @@
 
     
     <div class="">
-        <div class="scrollup scrollup-phone">
-            <i class="fa fa-phone"></i>
-        </div>
+        <a href="tel:+14504735042" style="color: white">
+            <div class="scrollup scrollup-phone">
+                <i class="fa fa-phone"></i>
+            </div>
+        </a>
     </div>
     <div class="scroll-to-up">
         <div class="scrollup">
